# star-control

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TRANSLATING.md  package-lock.json  package.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/star-control.de/: index.html
docs/star-control.de/css/: fonts.css  handbook.css  legal.css  styles.css
docs/star-control.de/de/: imprint.html  index.html  privacy.html
docs/star-control.de/de/handbook/: dashboard.html  getting-started.html  index.html  installation.html  keybindings.html  launching.html  localization.html  profiles.html  settings.html  storage.html  troubleshooting.html  usercfg.html  wine-runners.html
docs/star-control.de/en/: imprint.html  index.html  privacy.html
docs/star-control.de/en/handbook/: dashboard.html  getting-started.html  index.html  installation.html  keybindings.html  launching.html  localization.html  profiles.html  settings.html  storage.html  troubleshooting.html  usercfg.html  wine-runners.html
docs/star-control.de/js/: handbook.js  main.js
scripts/: create-portable-tarball.sh
scripts/screenshots/: capture.js
src/: i18n.js  index.html  main.js  router.js  utils.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: action_definitions.rs  binding_capture.rs  config.rs  dashboard.rs  dxvk.rs  installer.rs  lib.rs  localization.rs  main.rs  prefix_tools.rs  runners.rs  sc_config.rs  system_check.rs  util.rs
src/locales/de/: about.json  common.json  dashboard.json  dialogs.json  environments.json  installation.json  launch.json  runners.json  settings.json  setup.json
src/locales/en/: about.json  common.json  dashboard.json  dialogs.json  environments.json  installation.json  launch.json  runners.json  settings.json  setup.json
src/pages/: about.js  dashboard.js  environments.js  installation.js  launch.js  runners.js  settings.js  setup.js
src/styles/: main.css  pages.css  titlebar.css
src/utils/: dialogs.js  screenshot-bot.js
