[package]
name = "star-control"
version = "0.1.2"
description = "A Linux management tool for Star Citizen — install, configure, and launch with Wine/Proton"
authors = ["TomRhodan <tomrhodan@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/TomRhodan/star-control"
edition = "2021"

[lib]
name = "star_control_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
zstd = "0.13"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
quick-xml = "0.37"
chrono = { version = "0.4", features = ["serde"] }
